src/test/error/tuple.lns
fn func1() : (int,str) {
   return (= 1, "abc"), (= 2); // error
}
fn func2() : (int,str), (int) {
   return (= 1, "abc"), (= 2);
}
{
   let mut tuple1:(int,str!) = (= 1, "" );
   let tuple2:(int,str) = (= 1, "");
   tuple1 = tuple2; // error
   print( tuple1, tuple2 );
}
{
   class Hoge {
   }
   class Sub {
   }
   fn func(): (Hoge) {
      let hoge = new Hoge();
      return (= hoge); // error
   }
   fn sub(): (Sub) {
      return (= new Hoge()); // error
   }
}
